deploying production (static)
